fix(styling): menu panel misalignment on mobile

--- a/apps/portfolio-v2/src/components/Menu/styles.module.css
+++ b/apps/portfolio-v2/src/components/Menu/styles.module.css
@@ -3,5 +3,5 @@
 }
 
 .menuContent {
-  width: min(325px, calc(100vw - (24px * 2)));
+  width: min(375px, calc(100vw - (24px * 2)));
 }
